# prompt-op-flow

./: pyproject.toml
examples/: promptops.config.yaml
promptops/: cli.py  fixtures.py  skills_installer.py  util.py  wiring.py
promptops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
promptops/adapters/: contract.py  mock.py  registry.py
promptops/core/: builtins.py  engine.py  ledger.py  planner.py  policy.py  steps.py  template.py
promptops/domain/: hashing.py  models.py
promptops/services/: diff.py  drift.py  evaluator.py  gate.py  optimizer.py  profile.py  publish.py  qoder_cli.py
promptops/services/gate_executors/: default.py  llm.py  registry.py  types.py
promptops/storage/: artifacts.py  db.py  git.py  registry.py  workspace.py  yaml.py
resources/skills/promptops-accept-drift/: SKILL.md
resources/skills/promptops-connect/: SKILL.md
resources/skills/promptops-diff/: SKILL.md
resources/skills/promptops-evaluate/: SKILL.md
resources/skills/promptops-fixture-demo/: SKILL.md
resources/skills/promptops-gate/: SKILL.md
resources/skills/promptops-interactive-tuning/: SKILL.md
resources/skills/promptops-list-changes/: SKILL.md
resources/skills/promptops-optimize/: SKILL.md
resources/skills/promptops-publish/: SKILL.md
resources/skills/promptops-review/: SKILL.md
resources/skills/promptops-rollback/: SKILL.md
resources/skills/promptops-run-pipeline/: SKILL.md
resources/skills/promptops-show-change/: SKILL.md
resources/skills/promptops-status/: SKILL.md
tests/: test_drift.py  test_qoder_cli.py  test_smoke.py
(+1 files in other folders)
